Paulcy added KSC Programmes

--- a/KSC/generic.html
+++ b/KSC/generic.html
@@ -29,7 +29,7 @@
 							<li><a href="elements.html">Blog</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -44,9 +44,9 @@
 										<h1>About Us</h1>
 									</header>
 									<span class="image main"><img src="images/02.png" alt="" /></span>
-									<p> The Knowledge Sharing Campaign (KSC) is a community platform that brings together technologists (professionals with a background in STEM - Science, Technology, Engineering, Mathematics) and African students diaspora during their studies, who want to share knowledge, experience and learn from each other. Knowledge Sharing Campaign (KSC) is driven by remembering our roots, acknowledging current privileges, promoting excellence in education through technology and motivating bright minded African students to return to their respective home countries to contribute to the development of their society.</p>
-									<p>The Knowledge Sharing Campaign (KSC) provides to African students a safe platform to learn new technologies and also the experience in agile software development. Agile development life circle is the best way of delivering. Agile programming involves delivering working, tested every iteration. The Knowledge Sharing Campaign (KSC) cover basic professional tools and tips or strategies for job seekers.</p>
-									<p>The Knowledge Sharing Campaign (KSC) is important to African students, because a student after completing his four (4) weeks internship program which the knowledge sharing campaign (KSC) provides and workshops on project development and basic professional tools, will get all the technical skill required to get a good job or start a business. Today everything is becoming smart, a student of today with any background should know and understand this new technology.</p>
+									<p align="justify"> The Knowledge Sharing Campaign (KSC) is a community platform that brings together technologists (professionals with a background in STEM - Science, Technology, Engineering, Mathematics) and African students diaspora during their studies, who want to share knowledge, experience and learn from each other. Knowledge Sharing Campaign (KSC) is driven by remembering our roots, acknowledging current privileges, promoting excellence in education through technology and motivating bright minded African students to return to their respective home countries to contribute to the development of their society.</p>
+									<p align="justify">The Knowledge Sharing Campaign (KSC) provides to African students a safe platform to learn new technologies and also the experience in agile software development. Agile development life circle is the best way of delivering. Agile programming involves delivering working, tested every iteration. The Knowledge Sharing Campaign (KSC) cover basic professional tools and tips or strategies for job seekers.</p>
+									<p align="justify">The Knowledge Sharing Campaign (KSC) is important to African students, because a student after completing his four (4) weeks internship program which the knowledge sharing campaign (KSC) provides and workshops on project development and basic professional tools, will get all the technical skill required to get a good job or start a business. Today everything is becoming smart, a student of today with any background should know and understand this new technology.</p>
 								</div>
 							</section>
 
@@ -61,7 +61,7 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Apply online</label>
-											<a href="#" class="button primary">Click here</a>
+											<a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary">Click here</a>
 										</div>
 										<div class="field half">
 											<label for="email">Download Application</label>
@@ -126,6 +126,24 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+		<!--Start of Tawk.to Script-->
+			<script type="text/javascript">
+			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+			(function(){
+			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/5dfd33d727773e0d8329f09a/default';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+			s0.parentNode.insertBefore(s1,s0);
+			})();
+			</script>
+		<!--End of Tawk.to Script-->
+		
+		<!-- ShareThis BEGIN -->
+			<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e14e075dd527900136b17a5&cms=website' async='async'></script>
+		<!-- ShareThis END -->
 
 	</body>
 </html>
