--- a/KSC/index.html
+++ b/KSC/index.html
@@ -29,7 +29,7 @@
 							<li><a href="elements.html">Blog</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -104,7 +104,7 @@
 										<img src="images/06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Fellowship</a></h3>
+										<h3><a href="landing.html" class="link">Big Data Fellowship</a></h3>
 										<p>Reach out to people from underpriviledged backgrounds to introduce them to basic technology skills.</p>
 									</header>
 								</article>
@@ -114,7 +114,7 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>THE CAMPAIGN (KSC)</h2>
+										<h2>THE CAMPAIGN</h2>
 									</header>
 									<p align="justify">Knowledge Sharing Campaign (KSC) empowers African students in the diaspora and reverses brain drain by providing them with access to modern technology, which becomes a culture that promotes the love for quality education. Every month, we bring together hundreds of African students for weekend workshops to teach them basic computer skills so they can improve their education and their job prospects when they go home. We then offer a few selected students a 4-week hands-on Agile software development internship. Students in this program do problem solving using the discipline of Agile software development and are expected to develop a simple application. This teaches them a discipline useful in many environments even if they don’t become programmers.</p>
 									<ul class="actions">
@@ -134,7 +134,7 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Apply online</label>
-											<a href="#" class="button primary">Click here</a>
+											<a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary">Click here</a>
 										</div>
 										<div class="field half">
 											<label for="email">Download Application</label>
@@ -203,6 +203,24 @@
 			var d = new Date();
 			document.getElementById("demo").innerHTML = d;
 			</script>
+
+		<!--Start of Tawk.to Script-->
+			<script type="text/javascript">
+			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+			(function(){
+			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/5dfd33d727773e0d8329f09a/default';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+			s0.parentNode.insertBefore(s1,s0);
+			})();
+			</script>
+		<!--End of Tawk.to Script-->
+		
+		<!-- ShareThis BEGIN -->
+			<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e14e075dd527900136b17a5&cms=website' async='async'></script>
+		<!-- ShareThis END -->
 
 	</body>
 </html>
