--- a/KSC/landing.html
+++ b/KSC/landing.html
@@ -30,7 +30,7 @@
 							<li><a href="elements.html">Blog</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
 					</nav>
@@ -58,9 +58,9 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Bring, Share & Learn</h2>
+										<h2>KSC's Mainstream Program</h2>
 									</header>
-									<p align="justify">We realise that the scattered young Africans around the globe form a powerful, huge community that can be united through a love for quality education using technology. We learn that the African student diaspora in India is as large as around 100,000 students. Young men and women who left their families are hungry for knowledge and passionate about quality education, which is key for today’s youth to plan for a better future.</p>
+									<p align="justify">The African student faces challenges to get internship opportunities. KSC's key objectives have been shaped in a way that ensure we are able to respond to students’ specific challenges as we learn from their backgrounds and skills prior to starting the program.</p>
 								</div>
 							</section>
 
@@ -73,9 +73,10 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Goals</h3>
+												<h3>Internship Program</h3>
 											</header>
-											<p align="justify">Develop infrastructure and support, including innovative technology, for research, teaching, service and partnerships. Develop and maintain model collaborative ventures and partnerships. Maintain and continue to improve a climate of respect and human dignity. Prepare students to understand, contribute to, and succeed in a rapidly changing society, and thus make the world a better and more just place.</p>
+											<p align="justify">
+											Based on a student’s specific background, skills and interests, everyone chooses and plays one of the Agile roles - Business Analyst (BA), Developer, Quality Analyst (QA) and UI/UX. For example, a student who is studying for a Computer Applications program and does not have previous experience in software development, is encouraged and supported to play a Developer role. A student who studying in a Business Administration program and who chooses to play a BA role, will be skilled in the basic level of requirements gathering and analysis.</p>
 											<ul class="actions">
 												<li><a href=" " class="button">Learn more</a></li>
 											</ul>
@@ -89,9 +90,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Vision</h3>
+												<h3>Hands-on Training Workshops</h3>
 											</header>
-											<p align="justify">The vision of the Knowledge Sharing Campaign is to empower Africans to become outstanding educators, scholars, and researchers, to advance in the profession of education, as broadly defined, through research on the science and art of teaching and learning, the effective uses of technology, and the analysis and development of leadership and educational policy. The core values of KSC are academic freedom, tolerance, and experimentation. Create a new crop of open minded African leaders who will find solutions to African problems.</p>
+											<p align="justify">The program focuses on developing skills using Agile Practices, learning to use open source technologies and building awareness for social and economic issues. Communication and presentation skills are developed using the Pecha Kucha framework.</p>
 											<ul class="actions">
 												<li><a href=" " class="button">Learn more</a></li>
 											</ul>
@@ -105,9 +106,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>The Next Level</h3>
+												<h3>Entrepreneurship and leadership development seminars</h3>
 											</header>
-											<p align="justify">The Know & Can Teach (those who have experience and can share their knowledge) group and the Don’t Know & Can Learn (those who are eager to learn, but lack opportunities) group.</p>
+											<p align="justify">It helps them contribute to online content, to which traditionally African contribution has been very limited. At the end of each program, every KSC intern starts on her or his own journey, armed with their new skills. </p>
 											<ul class="actions">
 												<li><a href=" " class="button">Learn more</a></li>
 											</ul>
@@ -140,7 +141,7 @@
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Apply online</label>
-											<a href="#" class="button primary">Click here</a>
+											<a href="https://forms.gle/tyejrHpyZwKqBfAw9" class="button primary">Click here</a>
 										</div>
 										<div class="field half">
 											<label for="email">Download Application</label>
@@ -204,6 +205,22 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+		<!--Start of Tawk.to Script-->
+			<script type="text/javascript">
+			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+			(function(){
+			var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+			s1.async=true;
+			s1.src='https://embed.tawk.to/5dfd33d727773e0d8329f09a/default';
+			s1.charset='UTF-8';
+			s1.setAttribute('crossorigin','*');
+			s0.parentNode.insertBefore(s1,s0);
+			})();
+			</script>
+		<!--End of Tawk.to Script-->
+		
+		<!-- ShareThis BEGIN -->
+			<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e14e075dd527900136b17a5&cms=website' async='async'></script>
+		<!-- ShareThis END -->
 	</body>
 </html>
